recorrection of image folder

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <li><a>contact us</a></li>
             </ul>
           </div>
-          <img src="/c2-assets/logo-header.png" alt="">
+          <img src="/image/logo-header.png" alt="">
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
@@ -72,7 +72,7 @@
           every day!</p>
       </div>
       <figure class="center">
-        <img src="/c2-assets/hero-vegetables.png" alt="">
+        <img src="/image/hero-vegetables.png" alt="">
       </figure>
     </div>
     </div>
@@ -86,7 +86,7 @@
         <div>
           <div class="card bg-base-100 w-96 shadow-sm">
             <figure class="px-10 pt-10">
-              <img src="/c2-assets/service.png" alt="Shoes" class="rounded-xl" />
+              <img src="/image/service.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">24/7 Services </h2>
@@ -99,7 +99,7 @@
         <div>
           <div class="card bg-base-100 w-96 shadow-sm">
             <figure class="px-10 pt-10">
-              <img src="/c2-assets/delivery.png" alt="Shoes" class="rounded-xl" />
+              <img src="/image/delivery.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">24/7 Services </h2>
@@ -112,7 +112,7 @@
         <div>
           <div class="card bg-base-100 w-96 shadow-sm">
             <figure class="px-10 pt-10">
-              <img src="/c2-assets/healthy.png" alt="Shoes" class="rounded-xl" />
+              <img src="/image/healthy.png" alt="Shoes" class="rounded-xl" />
             </figure>
             <div class="card-body items-center text-center">
               <h2 class="card-title">24/7 Services </h2>
@@ -138,14 +138,14 @@
 
             </div>
             <figure>
-              <img src="/c2-assets/vegetable-offer.png" alt="" />
+              <img src="/image/vegetable-offer.png" alt="" />
             </figure>
           </div>
         </div>
         <!-- cards -->
         <div class="absolute flex items-center bg- shadow-lg px-2 py-2 ">
           <div>
-            <img src="/c2-assets/onion.png" alt="">
+            <img src="/image/onion.png" alt="">
 
           </div>
           <div><i class="fa-solid fa-star text-2xl text-amber-500"> 4.5</i>
@@ -167,7 +167,7 @@
   <footer class="md:container mx-auto">
     <footer class="footer sm:footer-horizontal bg-base-300 text-base-content p-10">
       <nav>
-        <img src="/c2-assets/logo-header.png" alt="">
+        <img src="image/logo-header.png" alt="">
         <p>Discover a world of treats, toys, and <br>essentials handpicked for your furry friends</p>
 
       </nav>
